--- a/MedClient/MedClient.csproj
+++ b/MedClient/MedClient.csproj
@@ -108,11 +108,20 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="Service References\ServiceReference1\MedClient.ServiceReference1.peoples.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\ServiceReference1\MedWCF.wsdl" />
     <None Include="Service References\ServiceReference1\MedWCF.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\ServiceReference1\MedWCF1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReference1\MedWCF2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReference1\MedWCF3.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -124,6 +133,11 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\ServiceReference1\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\man.jpg" />
+    <Resource Include="Images\med.jpg" />
+    <Resource Include="Images\wooman.jpg" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\ServiceReference1\MedWCF.disco" />
@@ -139,12 +153,6 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <Resource Include="Images\man.jpg" />
-    <Resource Include="Images\med.jpg" />
-    <Resource Include="Images\wooman.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
