*interface *новые фичи

--- a/MedClient/App.config
+++ b/MedClient/App.config
@@ -7,12 +7,16 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IMedWCF" />
+                <binding name="BasicHttpBinding_IMedWCF1" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8085/MedWCF.svc" binding="basicHttpBinding"
                 bindingConfiguration="BasicHttpBinding_IMedWCF" contract="ServiceReference1.IMedWCF"
                 name="BasicHttpBinding_IMedWCF" />
+            <endpoint address="http://localhost:8085/MedWCF.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IMedWCF1" contract="ServiceReference1.IMedWCF"
+                name="BasicHttpBinding_IMedWCF1" />
         </client>
     </system.serviceModel>
 </configuration>
